# Simple-Manual-Map-Injector

./: .gitignore  CMakeLists.txt  Manual Map Injector.sln  README.md  TheCruZMMapConfig.cmake.in
.github/workflows/: build.yml
Manual Map Injector/: Manual Map Injector.vcxproj  Manual Map Injector.vcxproj.filters  injector.cpp  injector.h  main.cpp
